# partial-io

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.tpl  publish-docs.sh
.github/workflows/: ci.yml  docs.yml  release.yml
examples/: buggy_write.rs
rustdoc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
rustdoc/aho_corasick/: all.html  enum.ErrorKind.html  enum.MatchKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html  trait.StateID.html
rustdoc/bit_set/: all.html  index.html  struct.BitSet.html  struct.Difference.html  struct.Intersection.html  struct.Iter.html  struct.SymmetricDifference.html  struct.Union.html
rustdoc/bit_vec/: all.html  index.html  struct.BitVec.html  struct.Blocks.html  struct.IntoIter.html  struct.Iter.html  trait.BitBlock.html
rustdoc/bitflags/: all.html  index.html  macro.bitflags.html
rustdoc/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
rustdoc/bytes/: index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html
rustdoc/cfg_if/: all.html  index.html  macro.cfg_if.html
src/: async_read.rs  async_write.rs  futures_util.rs  lib.rs  proptest_types.rs  quickcheck_types.rs  read.rs  write.rs
(+9948 files in other folders)
