[package]
name = "partial-io"
version = "0.5.2"
edition = "2021"
authors = ["Rain <rain@sunshowers.io>"]
description = "Helpers to test partial, interrupted and would-block I/O operations."
documentation = "https://docs.rs/partial-io"
repository = "https://github.com/sunshowers-code/partial-io"
readme = "README.md"
keywords = ["partial", "interrupted", "wouldblock", "tokio", "quickcheck"]
categories = ["development-tools::testing", "asynchronous"]
license = "MIT"
rust-version = "1.56"
exclude = [
  "TARGETS",
  "publish-docs.sh",
  "rust-partial-io.iml",
  ".travis.yml",
  "**/*.bk",
]

[dependencies]
futures = { version = "0.3", optional = true }
pin-project = { version = "1.0.4", optional = true }
proptest = { version = "1.0.0", optional = true }
quickcheck = { version = "1.0.3", optional = true }
rand = { version = "0.8.5", features = [
  "getrandom",
  "small_rng",
], optional = true }
tokio = { version = "1.21.1", optional = true }

[dev-dependencies]
itertools = "0.10.5"
once_cell = "1.15.0"
quickcheck = "1.0.3"
tokio = { version = "1.21.1", features = [
  "io-util",
  "macros",
  "rt-multi-thread",
] }

[[example]]
name = "buggy_write"
required-features = ["quickcheck1", "proptest1"]

[features]
futures03 = ["futures", "pin-project"]
tokio1 = ["futures03", "tokio"]
quickcheck1 = ["quickcheck", "rand"]
proptest1 = ["proptest"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
